# OpenCRun

./: Makefile  Makefile.common  Makefile.config.in  Makefile.rules  README.md  clang-opencrun.diff
autoconf/: AutoRegen.sh  configure.ac  configure.ver
bench/: Makefile  Makefile.bench
bench/blocked-msquare/: Makefile  blocked-msquare.cl  blocked-msquare.cpp
bench/schoolbook-msquare/: Makefile  schoolbook-msquare.cl  schoolbook-msquare.cpp
include/CL/: cl.hpp  cl_gl_ext.h
include/opencrun/Core/: Command.h  CommandQueue.h  Context.h  Device.h  Event.h  Kernel.h  MemoryObj.h  Platform.h  Profiler.h  Program.h
include/opencrun/Device/: Devices.h
include/opencrun/Device/CPU/: CPUDevice.h  CPUThread.h  Command.h  InternalCalls.h  Memory.h  Multiprocessor.h
include/opencrun/Device/CPULib/: InternalCall.h
include/opencrun/Device/CPUPasses/: AllPasses.h
include/opencrun/Device/GenLib/: Math.td  OCLDef.td  OCLTypes.td
include/opencrun/Passes/: AggressiveInliner.h  AllPasses.h  FootprintEstimate.h  FootprintEstimator.h
include/opencrun/System/: Env.h  FastRendevouz.h  Hardware.h  Monitor.h  OS.h  Thread.h  Time.h
include/opencrun/Util/: Builtins.def  DimensionInfo.h  MTRefCounted.h  OpenCLMetadataHandler.h  PassOptions.h  Table.h
lib/: Makefile
lib/Core/: Command.cpp  CommandQueue.cpp  Context.cpp  Device.cpp  Event.cpp  Kernel.cpp  Makefile  MemoryObj.cpp  Platform.cpp  Profiler.cpp  Program.cpp
lib/Device/: Devices.cpp  Makefile
lib/Device/CPU/: CPUDevice.cpp  CPUThread.cpp  Command.cpp  InternalCalls.def  Makefile  Memory.cpp  Multiprocessor.cpp  StackX8632.inc  StackX8664.inc  SynchronizationInternalCalls.cpp  WorkItemInternalCalls.cpp
lib/Device/CPULib/: Makefile  Math.cl  Math.cpp  Synchronization.cl  WorkItem.cl  WorkItem.cpp
lib/Device/CPULib/BitCode/: Makefile
lib/Device/CPULib/InternalCall/: Makefile  WorkItem.cpp
lib/Device/CPUPasses/: AllPasses.cpp  BarrierUtils.cpp  BlockSplitting.cpp  BlockUtils.cpp  Environment.cpp  GroupParallelStub.cpp  Makefile  PassUtils.h
lib/Passes/: AggressiveInliner.cpp  AllPasses.cpp  FootprintEstimate.cpp  FootprintEstimator.cpp  Makefile
lib/System/: Env.cpp  Hardware.cpp  Makefile  Monitor.cpp  OS.cpp  Thread.cpp  Time.cpp
lib/Util/: DimensionInfo.cpp  Makefile  OpenCLMetadataHandler.cpp  PassOptions.cpp  Table.cpp
test/: Makefile  lit.cfg  site.exp.in
test/Device/CPUPasses/GroupParallelStub/: CommandLine.ll  NoParamsKernel.ll  PassBuffer.ll  PassByValue.ll
test/Passes/AggressiveInliner/: ExternalCall.ll  OnlyLeaves.ll  RecursiveInline.ll  SimpleInline.ll  dg.exp
test/Passes/FootprintEstimator/: Accuracy.ll  Call.ll  DerivedTypes.ll  NullKernel.ll  PrimitiveTypes.ll
test/Unit/: lit.cfg  lit.site.cfg.in
tools/: Makefile
tools/OpenCRunCPUPasses/: ForceLinking.cpp  Makefile
tools/OpenCRunPasses/: ForceLinking.cpp  Makefile
tools/hardware-viewer/: Makefile  hardware-viewer.cpp
tools/libOpenCRun/: CommandQueue.cpp  CommandQueueProperties.def  Context.cpp  ContextProperties.def  Device.cpp  DeviceProperties.def  EnqueueCommand.cpp  Event.cpp  EventProperties.def  Extension.cpp  FlushFinish.cpp  ICDExtension.cpp  Kernel.cpp  KernelProperties.def  Makefile  MemoryObject.cpp  MemoryObjectProperties.def  Platform.cpp  PlatformProperties.def  Profiling.cpp  Program.cpp  Sampler.cpp  Utils.h  libOpenCRun.exports
tools/platform-query/: Makefile  platform-query.cpp
unittests/: Makefile
unittests/API/: Context.cpp  Kernel.cpp  Makefile
unittests/Runtime/: ArgPassing.cpp  CallGraphLoop.cpp  LocalMemory.cpp  Makefile  RuntimeFixture.cpp  RuntimeFixture.h  WorkGroup.cpp
unittests/Skel/: Makefile  Plain.cpp
utils/: Makefile
utils/OCLBench/: Makefile
utils/OCLBench/include/oclbench/: Benchmark.h  BenchmarkPrinter.h  DataTypes.h
utils/OCLBench/lib/: Benchmark.cpp  BenchmarkPrinter.cpp  DataTypes.cpp  Makefile
utils/OCLGen/: Makefile  OCLGen.cpp  OCLLibBuiltin.cpp  OCLLibBuiltin.h  OCLLibEmitter.cpp  OCLLibEmitter.h
utils/oclgen/: Math.py  create-ocldef  create-ocllib  create_gen_lib.py
